@@ -1,3 +1,3 @@
-VERSION=4.08.01
+VERSION=4.08.02
 YEARS=2005-2017
 
