@@ -5,11 +5,10 @@ CSV4180::CharType CSV4180::peek()
     if (d_begin == d_end)
         return EOS;
 
-    switch (*d_begin)
+    switch (int ch = *d_begin)
     {
         case '\r':  return CR;
         case '"':   return DQUOTE;
-        case ',':   return COMMA;
-        default:    return CHAR;
+        default:    return ch == d_fieldSep ? FIELDSEP : CHAR;
     }
 }
