@@ -1,3 +1,10 @@
+bobcat (4.08.02)
+
+  * CSV4180 supports configurable field separator characters.
+
+  * Fixed a flaw in the CSV4180 man-page
+
+
 bobcat (4.08.01)
 
   * Fixed a bug in fswap due to which fswap could not swap plain pointers.
